--- a/MSPrime_sims/ExploringTheTernaryForrest.ipynb
+++ b/MSPrime_sims/ExploringTheTernaryForrest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0437f5a7",
+   "id": "57c41cca",
    "metadata": {},
    "source": [
     "# Plotting simulated topology weights in R"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "4a22414c",
+   "id": "94d1962a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3d0ed874",
+   "id": "08185d95",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "0c01f1d2",
+   "id": "f46fe489",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "e1ab0d19",
+   "id": "c1a37725",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "1226eac9",
+   "id": "ccdab793",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 271,
-   "id": "02db3984",
+   "id": "2ed32c82",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 273,
-   "id": "ada2171a",
+   "id": "36796204",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 304,
-   "id": "1c9329e3",
+   "id": "a7d920e2",
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 323,
-   "id": "480062c2",
+   "id": "6d199178",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 348,
-   "id": "2bdd9e71",
+   "id": "f84e1393",
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": 352,
-   "id": "921785a5",
+   "id": "0ceb9791",
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": 443,
-   "id": "50143f1c",
+   "id": "cd231ad9",
    "metadata": {},
    "outputs": [
     {
@@ -1111,8 +1111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
-   "id": "e3f31665",
+   "execution_count": 545,
+   "id": "fa670a7b",
    "metadata": {},
    "outputs": [
     {
@@ -1219,6 +1219,68 @@
     "\n",
     "dev.off()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 659,
+   "id": "6072dca3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "Dlr <- function(df){\n",
+    "    df_counts <- df %>% mutate(side = case_when(\n",
+    "    topo1 > topo2 ~ 'right',\n",
+    "    topo1 < topo2 ~ 'left'))\n",
+    "    \n",
+    "counts <- as.data.frame(table(df_counts$side))\n",
+    "    left <-counts[1,2]\n",
+    "    right <-counts[2,2]\n",
+    "\n",
+    "    total <- right + left\n",
+    "    \n",
+    "    test <- (left-(0.5*total))/(0.5*total)\n",
+    "    return(test)\n",
+    "}\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 662,
+   "id": "c0b380ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.00340204122473484"
+      ],
+      "text/latex": [
+       "0.00340204122473484"
+      ],
+      "text/markdown": [
+       "0.00340204122473484"
+      ],
+      "text/plain": [
+       "[1] 0.003402041"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Dlr(data_N0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea3fac2e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
