--- a/012plot_privateAlleles/Jacknife_SFS_and_pvt_alleles.ipynb
+++ b/012plot_privateAlleles/Jacknife_SFS_and_pvt_alleles.ipynb
@@ -5,7 +5,7 @@
    "id": "56638bce",
    "metadata": {},
    "source": [
-    "# Private alleles and folded SFS"
+    "# Ananlysis of private alleles and folded SFS"
    ]
   },
   {
